--- a/pages/phase-3/step-3.mdx
+++ b/pages/phase-3/step-3.mdx
@@ -6,29 +6,29 @@ import { docco } from 'react-syntax-highlighter/dist/cjs/styles/hljs';
 
 You can find the feature code on line 35 of `module04/index.js`:
 
-<SyntaxHighlighter showLineNumbers="true" startingLineNumber={35} language="javascript" style={docco}>
+<SyntaxHighlighter showLineNumbers="true" startingLineNumber={33} language="javascript" style={docco}>
 {
 `if (useNewConfig) {
   config = new AppConfiguration(options);
-    } else {
-      config = new LegacyAppConfiguration(options);
-    }
   config.loadFromFile('/var/opt/myApp/config.json');
-  // ---------------------------
-  // Do not edit below this line
-  configValid = config.validate();
-  dependenciesSatisfied = config.checkDependencies();
+} else {
+  config = new LegacyAppConfiguration(options);
+  config.loadFromFile('/etc/myApp/config.json');
 }
-return {
-flagValue: useNewConfig,
-featureIsWorking: configValid && dependenciesSatisfied // Check Feature Dependencies
-};`
-}
+config.loadDependencies(pathToDependencies);
+\n...\n
+configValid = config.validate();
+dependenciesSatisfied = config.checkDependencies();
+\nreturn {
+  flagValue: useNewConfig,
+  featureIsWorking: configValid && dependenciesSatisfied // Check Feature Dependencies
+};
+`}
 </SyntaxHighlighter>
 
 Interesting, nothing seems to stand out in the feature code— but what's this?
 
-<SyntaxHighlighter showLineNumbers="true" startingLineNumber={47} language="javascript" style={docco}>
+<SyntaxHighlighter showLineNumbers="true" startingLineNumber={46} language="javascript" style={docco}>
 {
 `return {
   flagValue: useNewConfig,
@@ -39,7 +39,7 @@ Interesting, nothing seems to stand out in the feature code— but what's this?
 
 Before the feature can run at all, it looks like we're doing a dependency check.
 
-<SyntaxHighlighter showLineNumbers="true" startingLineNumber={45} language="javascript" style={docco}>
+<SyntaxHighlighter showLineNumbers="true" startingLineNumber={44} language="javascript" style={docco}>
 {
 `  dependenciesSatisfied = config.checkDependencies();`
 }
@@ -57,7 +57,7 @@ Let's have a look at the `module04/dependencies.js` file.
 }
 </SyntaxHighlighter>
 
-Interesting, `critical-dependency` in production is at version `0.4`— that satisfies the dependency check for this feature, but is it the same version we used when we developed this feature? Let's refer back to `module02/dependencies.js` to see what the version is there:
+Interesting, we have imported `critical-dependency` in production, which sounds like it will satisfy the dependency check. But is it the same version we used when we developed this feature? Let's refer back to `module02/dependencies.js` to see what the version is there:
 
 <SyntaxHighlighter showLineNumbers="true" language="javascript" style={docco}>
 {
@@ -69,7 +69,7 @@ Interesting, `critical-dependency` in production is at version `0.4`— that sat
 }
 </SyntaxHighlighter>
 
-A HA! It's a different dependency version, `0.6`, just as we suspected! We do a quick codescan, and the only feature using this dependency is ours (nice how everything works out perfectly in a made up scenario, huh?). Let's go ahead and update the dependency now in `module04/dependencies.js`, like so:
+Aha! It's a different dependency version, `0.6`, just as we suspected! We do a quick codescan, and the only feature using this dependency is ours (nice how everything works out perfectly in a made-up scenario, huh?). Let's go ahead and update the dependency now in `module04/dependencies.js`, like so:
 
 <SyntaxHighlighter showLineNumbers="true" language="javascript" style={docco}>
 {
@@ -80,7 +80,6 @@ A HA! It's a different dependency version, `0.6`, just as we suspected! We do a 
 }`
 }
 </SyntaxHighlighter>
-
 
 If the dependencies file matches the above sample, go ahead and save it.
 
