--- a/pages/phase-2/step-1.mdx
+++ b/pages/phase-2/step-1.mdx
@@ -12,8 +12,6 @@ You might remember that we mentioned something called an **Evaluation Context** 
 }
 </SyntaxHighlighter>
 
-Or maybe not. It's okay, we're going to talk about it in detail now anyway.
-
 For this exercise, you will be working out of `module03/index.js` .
 
 You may have noticed that the `context` parameter was actually a variable. You may have even noticed that the context variable was pre-defined as an object with a single attribute in the sample code for the module.
@@ -48,9 +46,9 @@ In this scenario, our **evaluation contexts** represent a user evaluating featur
 `{
     "key": "ip-10-24-34-0.us-west-2.compute.internal",
     "custom": {
-        "serviceType": "database",
-        "operatingSystem": "Linux",
-        "ip-adress": "10.24.34.0"
+        "service_type": "database",
+        "operating_system": "Linux",
+        "ip-address": "10.24.34.0"
     }
 }`
 }
@@ -64,8 +62,8 @@ We've populated these evaluation contexts with static values today, but this wou
     "key": id,
     "custom": {
         "device": deviceType,
-        "operatingSystem": osName,
-        "browserName": browserName
+        "operating_system": osName,
+        "browser_name": browserName
     }
 }`
 }
