Rename modules, proofread, formatting, content stuff

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -8,7 +8,7 @@ Today, you're going to learn how you can use LaunchDarkly's feature management s
 
 The professional services team at LaunchDarkly has tailored this application to demonstrate the core capabilities you would like to improve within your team. Each example provided will be delivered through an interactive code sample in your native programming language, like the one below:
 
-![screenshot of vscode](/images/interactive-code-sample.png)
+![screenshot of VS Code](/images/interactive-code-sample.png)
 
 In order to connect this application to the code you'll be working with, please enter the URL for your server below:
 
@@ -16,7 +16,7 @@ In order to connect this application to the code you'll be working with, please 
 
 Over the course of this training, we'll use the LaunchDarkly SDK and Feature Flags to address the following topics
 
-- Separating Deploy from Relase
+- Separating Deploy from Release
 - Targeted Rollouts
 - Testing in Production
 - Prerequisite and Keystone Flags
