--- a/pages/module-0/Introduction.mdx
+++ b/pages/module-0/Introduction.mdx
@@ -1,6 +1,6 @@
-# Phase 0: Implement the LaunchDarkly Client
+# Implement the LaunchDarkly Client
 
-Before we can use LaunchDarkly feature flags to separate our deploy from our release, we'll need to implement a **LaunchDarkly Client**. The **LaunchDarkly Client** establishes a connection to your **LaunchDarkly Project** and caches the Feature Flag set and **Targeting Rules** for your **Environment**. We will explain more about the bolded terms as we arrive at them over the couse of the lesson, or you can click on them to be brought to relevant documentation in our knowledgebase.
+Before we can use LaunchDarkly feature flags to separate our deploy from our release, we'll need to implement a **LaunchDarkly Client**. The **LaunchDarkly Client** establishes a connection to your **LaunchDarkly Project** and caches the Feature Flag set and **Targeting Rules** for your **Environment**. We will explain more about the bolded terms as we arrive at them over the course of the lesson, or you can click on them to be brought to relevant documentation in our knowledge base.
 
 
 This will require the following steps:
