--- a/pages/module-0/step-2.mdx
+++ b/pages/module-0/step-2.mdx
@@ -6,7 +6,7 @@ import { useState } from 'react';
 import { getSdkKeyFromLocalStorage } from '../../lib/flagHelpers';
 import { docco } from 'react-syntax-highlighter/dist/cjs/styles/hljs';
 
-# Step 2: Add Your SDK Key
+# Step 2: Add your SDK key
 
 Our LaunchDarkly Client will need to know which feature flags to cache, and the **Targeting Rules** associated with them, before we can start diving into examples— so we'll need to wire our app up to our **Environment**. You can find additional explanation about LaunchDarkly **Environments** and **Projects** in the optional content below.
 
@@ -22,7 +22,7 @@ First, make sure you're in the correct project/environment
 
 If not, switch to the correct project
 
-![Selecting a Projecty and Environment](/images/selecting-project.gif)
+![Selecting a Project and Environment](/images/selecting-project.gif)
 
 Next, we'll use the **Global Search** keyboard shortcut: 
 
