--- a/pages/module-2/step-1.mdx
+++ b/pages/module-2/step-1.mdx
@@ -4,7 +4,7 @@ import { getFirstFlagFromLocalStorage } from '../../lib/flagHelpers';
 
 # Step 1: Evaluation Contexts
 
-You might remember that we mentioned something called an **Evaluation Context** back in Phase&nbsp;1. It's one of the required parameters to our `ldclient.variation()` method. We showed you this code sample, remember?
+You might remember that we mentioned something called an **Evaluation Context** back in Phase 1. It's one of the required parameters to our `ldclient.variation()` method. We showed you this code sample, remember?
 
 <SyntaxHighlighter showLineNumbers="false" language="javascript" style={docco}>
 {
