--- a/pages/module-3/step-1.mdx
+++ b/pages/module-3/step-1.mdx
@@ -16,8 +16,8 @@ Don't forget to turn the flag back on before saving
 
 ![animation turning the flag on and clicking save](/images/turn-on-and-save.gif)
 
-Ok, our flag is on but it's currently returning `false` for all rulesets. We grab an Android test device and login with our production credentials:
+Okay, our flag is on but it's currently returning `false` for all rulesets. We grab an Android test device and login with our production credentials:
 
-<BrokenFeatureModule moduleId="4" />
+<BrokenFeatureModule moduleId="3" />
 
 Everything is looking good. You check the app version and it's `2.0`, so this device should be able to recreate the issue.
