--- a/pages/module-1/step-1.mdx
+++ b/pages/module-1/step-1.mdx
@@ -13,7 +13,7 @@ Follow the steps below to create your release flag.
 If you can't think of unique word, use your first name. If all else fails, here's one you can use:
 <FlagNameGenerator />
 - Notice the auto generated `Key` for the flag. This is how you're going to reference your feature flag in code once it's implemented. Keep in mind the flag key cannot be changed later.
-- That's all we'll need for this step, we can leave the rest of our flag settings at default— but take note of the `Client-Side SDK availability` checkboxes, the return types in the `Flag variations` dropdown, and the `Default Variation` settings:
+- That's all we'll need for this step, we can leave the rest of our flag settings at default, but take note of the `Client-Side SDK availability` checkboxes, the return types in the `Flag variations` dropdown, and the `Default Variation` settings:
 ![annotated screenshot of features](/images/flag-features.png)
 To learn more about these settings, check out the optional content below.
 <OptionalContent><h2>Flag Settings</h2></OptionalContent>
