--- a/pages/module-2/step-3.mdx
+++ b/pages/module-2/step-3.mdx
@@ -18,7 +18,7 @@ Let's go ahead and save our rule changes.
 
 Alright, let's check back and see which of our users are receiving our feature now:
 
-<UserTargetingModule moduleId={3} />
+<UserTargetingModule moduleId="2" />
 
 Is this what you expected? If not, you may be slightly confused about how LaunchDarkly evaluates targeting conditions. Remember, we already targeted this feature to be exposed to only Android users— but one of our users is on the incorrect version of the app. This is because conditions are evaluated in order of their appearance on the flag targeting page:
 
