--- a/pages/module-1/Introduction.mdx
+++ b/pages/module-1/Introduction.mdx
@@ -1,10 +1,10 @@
 # Phase 1: Separate Deploy from Release
 
-Fantastic, we've got our **LaunchDarkly Client** defined! Now, the fun can begin.
+Fantastic, we've got our **LaunchDarkly client** defined! Now, the fun can begin.
 
-While implementation was (hopefully) straightforward, don't be deceived! The speed, resiliency, and simplicity of our system unlocks a variety of powerful capabilities for your team.
+While implementation was (hopefully) straightforward, don't be deceived! The speed, resiliency, and simplicity of our system unlocks a variety of powerful capabilities for your team.
 
-The first of these capabilities we've decided to focus on is **Separating Deploy from Release**.
+The first of these capabilities we've decided to focus on is **Seperating Deploy from Release**.
 
 In this exercise, we'll implement a feature flag and mitigate the risk around releasing new code in the wild.
 
