Add better explanation of server URL per #5

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -10,7 +10,9 @@ The professional services team at LaunchDarkly has tailored this application to 
 
 ![screenshot of VS Code](/images/interactive-code-sample.png)
 
-In order to connect this application to the code you'll be working with, please enter the URL for your server below:
+This training is meant to be hands-on and interactive; in addition to this application, you should have received instructions on how to access a backend application that we'll be using to illustrate common SDK usage patterns. This backend application also includes a web server that we'll query from this application to give you feedback on whether you're completing the lessons correctly.
+
+When you start up the backend application, you should see a URL. Please enter it below:
 
 <APIServerInput />
 
