Remove OptionalContent sections until we populate them

--- a/pages/module-0/step-2.mdx
+++ b/pages/module-0/step-2.mdx
@@ -8,9 +8,7 @@ import { docco } from 'react-syntax-highlighter/dist/cjs/styles/hljs';
 
 # Step 2: Add your SDK key
 
-Our LaunchDarkly Client will need to know which feature flags to cache, and the **Targeting Rules** associated with them, before we can start diving into examples— so we'll need to wire our app up to our **Environment**. You can find additional explanation about LaunchDarkly **Environments** and **Projects** in the optional content below.
-
-<OptionalContent> <h2> Projects and Environments </h2> </OptionalContent>
+Our LaunchDarkly Client will need to know which feature flags to cache, and the **Targeting Rules** associated with them, before we can start diving into examples— so we'll need to wire our app up to our **Environment**.
 
 Let's find the SDK key for our LaunchDarkly **Environment** now. 
 
