--- a/pages/module-2/step-2.mdx
+++ b/pages/module-2/step-2.mdx
@@ -58,9 +58,7 @@ Our finished rule should look like this:
 
 ![screenshot of rule](/images/targeting-rule-android-users.png)
 
-You may have noticed that the fields were autopopulated with potential values when you created your rule. This is something we've done to make your life easier — but what if your attribute values are sensitive information? Don't worry, you can keep the values of your attributes **private** if you'd like. Check out the optional content below to learn more:
-
-<OptionalContent><h2>Private attributes</h2></OptionalContent>
+You may have noticed that the fields were autopopulated with potential values when you created your rule. This is something we've done to make your life easier — but what if your attribute values are sensitive information? Don't worry, you can keep the values of your attributes **private** if you'd like. 
 
 Now that our rule is configured, let's save our flag.
 
