--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -2,7 +2,7 @@ import APIServerInput from '../components/APIServerInput';
 
 # Introduction
 
-Hey there, [company name]! Welcome to your LaunchDarkly North Star training.
+Hey there! Welcome to your LaunchDarkly North Star training.
 
 Today, you're going to learn how you can use LaunchDarkly's feature management system to improve your software development practices.
 
